# DOGEcopter

./: README.md
tricopter-lqr/: .gitignore  CMakeLists.txt
tricopter-lqr/config/: tricopter_default.yaml
tricopter-lqr/doc/: tricopter_controller_report.tex
tricopter-lqr/include/: config.hpp  control_allocation.hpp  dynamics.hpp  integrator.hpp  lqr.hpp  pid.hpp  simulation.hpp  trim.hpp
tricopter-lqr/src/: config.cpp  control_allocation.cpp  dynamics.cpp  integrator.cpp  lqr.cpp  main.cpp  pid.cpp  simulation.cpp  trim.cpp
tricopter-lqr/tests/: test_main.cpp
